package assets

const ChefAutomateUpgradeFromV1SeflTestCRL = `-----BEGIN X509 CRL-----
MIICnDCBhQIBATANBgkqhkiG9w0BAQsFADAsMSowKAYDVQQDEyFDaGVmQXV0b21h
dGVVcGdyYWRlRnJvbXYxU2VsZlRlc3QXDTE4MDIyNDE5MTE0NFoXDTE5MDgyNDE5
MTEzNlowAKAjMCEwHwYDVR0jBBgwFoAUlHt1okFz9FXlssdhnjujlALh+McwDQYJ
KoZIhvcNAQELBQADggIBAKQ87NMS8pjCcdpXicIwhudkn75n66b202Eg2OvrSHGc
sl1FIf81A+KTDrl0T9VqCi0PrIZGjq6d/VGrDbQM5HgV8I3tElRl+t0g6NzLYR4L
5BchwJYl5FqED2yP3Et3RlmRhe3mMdcrC5TxKB1js874Ih04ljx5j5ME5KSny8+1
tRIX8pQ4fO/iP06D007kB/wCzFx79KLuyuL9j0OW/ydlKiHVgRi4kASuUcTpKtZG
c0yg6Vl5W1Tb6S+8VrxG0MaK5hGbmo9I5WJbKhob3uL1bmskaJqTNGrSTtWJJAGi
wAX9lxL1+3XmRPohxyy3GkfnPcRDtqUNunkULFQBn54TBk05s/0XCZj5Urq13wEW
kL0OBy6D+LsxLt6eNH7lKfeixhOANf3kYzDFEu2zw9B9bOYSnl+F1XpJ7gL+J7tJ
PPlsr5j1w/7AUMTv+dYW8FVP2pu46QkHj6NW0qocl2/a52PR4QEeltWFPfSXSXb/
C/OUW5laTR13XLgGA8HaKJ0ijMBkDmbYJOU6ksxQpLPgv0dtd0YgUt8f/IPPFvMF
L9VJt+D+9NTkSoiVP2srwdM+2tVTCAwdzWeNrB13Qfai8yu+0yDYZg4w9usMlRMr
xlOfvXLwOFEQ4UkjB5gNiqMPFyvyaXSD36VX/+RqDzwnHRnSsPp3abC3eLpMhDPL
-----END X509 CRL-----
`

const ChefAutomateUpgradeFromV1SelfTestCRT = `-----BEGIN CERTIFICATE-----
MIIFGDCCAwCgAwIBAgIBATANBgkqhkiG9w0BAQsFADAsMSowKAYDVQQDEyFDaGVm
QXV0b21hdGVVcGdyYWRlRnJvbXYxU2VsZlRlc3QwHhcNMTgwMjI0MTkxMTM2WhcN
MTkwODI0MTkxMTM2WjAsMSowKAYDVQQDEyFDaGVmQXV0b21hdGVVcGdyYWRlRnJv
bXYxU2VsZlRlc3QwggIiMA0GCSqGSIb3DQEBAQUAA4ICDwAwggIKAoICAQC6Vw8L
jQT/QeKW1iHACSGb5fDF13Tp2NjJWDvpPxbQABLIwLBs5lm7aoxALvcClkrfCmE7
6mkT/ZPQXblLNBp9CJtaK8ffUOQPoWg6LN79x5Bk6TaICwvkogShRo+AZ+VIV6jS
9dCMDJlK3Lr0LcmIr6WPDMrau8tCJ1mEZjMaF14cBfLIdQNhWvqx83H1lC5EXkHV
dcl5FuKVcM0n+EW+W8mGhItnZPT3215cpQunPFWJDhMx8y03Gf59meBvxSsbuinZ
teToQBxGXGh4SneZz3vhm8e1p6/FvNK5NZ0W5YWRb3C6iTl0QqIqJGlEf+5Wh+iV
Y0SZadxIVApJrtxqIIphxYXWbLZIgqtwy835bmw6hGv5dVq1QilSkjnWV7OKf583
GMTkFiOhYVjsYgn0qjFL+EB0itZAfUdVqk9fNJcUIpX0+lMRe5MUK0eOXtjf3ymT
StNoQ9nluJ2XKMH9EG4TGhpDuGDdIK6vH8ojucQCMbUOF6+meicb3H/k6kcYsXGL
LvyoBZQ1CnJCR0tW1DltPFrlhHVqptgPdiLJeIOmQaiRz1qC/ub1wxw9Q1UfMABw
0kyXfS/3i0W78cdYucCcgBdTzR9CPglf2pbV14JT+80iEQAJ6GylTvatyt+kF1tK
jrn7+2UZT3rTYqvpFwlEA1damyaG254clXrb6wIDAQABo0UwQzAOBgNVHQ8BAf8E
BAMCAQYwEgYDVR0TAQH/BAgwBgEB/wIBADAdBgNVHQ4EFgQUlHt1okFz9FXlssdh
njujlALh+McwDQYJKoZIhvcNAQELBQADggIBABP5qrUj5IAfueLj0TWeuc3hE8y2
teknQsjVK55NQZ80LDsaV7ivRowF8tRQNJnv+eINrCn3bHVyrCqy+ni78TPIpqrP
z7JRU67czpv8b4Xfgp8pz09wHCnxM+lbvWws1HqDTLXhNrCK/2hyNW6YRJ5ptXZv
/OHpsJhJAlCmQGHg4KeA05Ony/OQGwOOQ4fZsMa1vpbxhANHiZdOcw2h823jBZ1Z
JiawgPQiprBum3U30IQ5KXQv1azXOisYsynbcIXqXxJ3km1YK48i/Z05cJw1Dkj/
QoaUkNSTRVaz9C87QBKVGRGsuI6rS8ng/YFjrJ2q69ZoMqmYYKARWw/Dv5vWPjuc
RORbh4AkAg7gx43PJdIlADCsTS9E4DWlofbizpE4EWhNgkLYKw/1IBT/uEwYkdHj
GkUzndkzt7yyx9l5JZ9bMhRhF4mDpuHWvfUCnSR9/0oW7xqfwvXdiOdirsYdAEj7
BNO+Nz0a1ROeA1zhYrz+qtfwM7fUOhqvK3Ebg0/2nKPPnVS3vEb/PsCGMQiXbWq1
2S+/luOVH1iAfhyOBYe80xbpE7/mUouCuedGm9Xiyw6V5e0ygFhIRSx9yd/RhXSI
CWejLykyaNH+EhZ7k5y3ygu3Gk3/MT8z7UK7suA7zO1Qu0ZR7sMsedi6wEzwrHjk
rGMiAD4rdhArElbC
-----END CERTIFICATE-----
`

const ChefAutomateUpgradeFromV1SelfTestKEY = `-----BEGIN RSA PRIVATE KEY-----
MIIJKAIBAAKCAgEAulcPC40E/0HiltYhwAkhm+Xwxdd06djYyVg76T8W0AASyMCw
bOZZu2qMQC73ApZK3wphO+ppE/2T0F25SzQafQibWivH31DkD6FoOize/ceQZOk2
iAsL5KIEoUaPgGflSFeo0vXQjAyZSty69C3JiK+ljwzK2rvLQidZhGYzGhdeHAXy
yHUDYVr6sfNx9ZQuRF5B1XXJeRbilXDNJ/hFvlvJhoSLZ2T099teXKULpzxViQ4T
MfMtNxn+fZngb8UrG7op2bXk6EAcRlxoeEp3mc974ZvHtaevxbzSuTWdFuWFkW9w
uok5dEKiKiRpRH/uVofolWNEmWncSFQKSa7caiCKYcWF1my2SIKrcMvN+W5sOoRr
+XVatUIpUpI51lezin+fNxjE5BYjoWFY7GIJ9KoxS/hAdIrWQH1HVapPXzSXFCKV
9PpTEXuTFCtHjl7Y398pk0rTaEPZ5bidlyjB/RBuExoaQ7hg3SCurx/KI7nEAjG1
DhevpnonG9x/5OpHGLFxiy78qAWUNQpyQkdLVtQ5bTxa5YR1aqbYD3YiyXiDpkGo
kc9agv7m9cMcPUNVHzAAcNJMl30v94tFu/HHWLnAnIAXU80fQj4JX9qW1deCU/vN
IhEACehspU72rcrfpBdbSo65+/tlGU9602Kr6RcJRANXWpsmhtueHJV62+sCAwEA
AQKCAgEAkaFGld1xgVjpkL7rg5zfUmrjwItByRz7WGiH8iOnXYohJBpMB+ADUxDT
aboKvE/fVe9TzLLHyqLMqfUFwnuHFB7s4w0CWUpr4rdfsM+uuyIDfIozXyFa+yWQ
fsaZkl4geGhh/fW1Ni8GgtZ9miZKsnOr7V+vDkHkeeAs+uewmnyWxUn006t3p9el
w/uiHa7gdfhAdWZnviYfkXGmNM25HCu6FVJzbKwfM7KTTc6DjAEATGvenpQRy1Wa
amkfWdr7dOEKoiahLs4kCu1fjFuOm3vnsovACf1yxxRqj+sRyXo56E7zCCYE7BLD
kDICv1FIYQI4yL/bNhbg3PopTCrIASXDqj1rp0Q7alaKPeU2E7xPHGV6vlzazsAT
fuGaL4RW7PITmb1vq3wUGWUIeI1OcTEyydGrUGEcYldgnKv1Lv/s5oXO7o3e50Ux
3EJmfFk0txSQCXk2sW3QnHhhZAvMGrsYN7JvGNsRgdrUdsZ/6cAVFTEyvveRtvrv
natOQ1Ox8Jhm+y7G12hmq1Xvbhn2PjSqSBzEm+cfXc1LjtQ76x4tS5ORb1X6xhJO
6Rn8oov//Ot54l1rzSkTx++4xA6qiC7GvX8lQob5YJhBMP4isuVoVIPmfeNOS8C6
EqKBn3+K83DyMvqJEo/ku6KBiDWykyzktUUgkMQ/Sjv2sMDPf2ECggEBAMNMo4bb
41pffj0ZK7748kO6ZH18Z9ktCUcaXzy4Z4odfwqoD7JnqM5w+nmrXdxLxoTxJjOf
FWCHBR3ipdoNPKu/b/cq/c3BuXr0uAXLgs5CQwJ0gb3OCQofD5GBVqt4yBhkA4w8
Pin7YLbvn1iace8mza1Q0IrPZ0iNACdePZDlBxOEaE/sXH5LZLGd0cnR33okpmUK
Y1bwE20T8y236/TuE9+cpUs0cPafv+orHUqIzrckLt3VsYbpbkBWVH5vjR/5PA4u
ysWVYJmT/iTg4NtELgxe4H9fTOm1+FrARRl98Fyt4gm0+OvL5d2rC/hIzH0qOsy7
MQotcEuprufK0tECggEBAPRBjoReWBg/mIuh6WgojBm7UvFaZmIUQNIv9V9tNGmA
RDNpe35UB8aDTBP6KQ5jIGW8mzPEuS9LOJ1miSzMuorm7vF8r+gSJS+PfkHpB+7E
n839/w51BbdXz9XNHTi3NVzd/PfCTjfr9NtQBloMYaBQzBCDztHfODAnkA4E0PV7
25hhZ7eNnhtKA8UXQSLAXTO5E61kNTUtOpKuZyVpZOIfQw7gnEYfBdYhwddLOAKA
d8e7amX90gAB2MK+AOgNO9Zm1hEe1305tA0Zy1+79aeQJKUErSZjAsixymUngmwq
Q0GnciRx9gaj6hITik1WyXRe6GBXIOaEFtIqZRL72fsCggEAQilidLtlaCZVo+k1
ErtPh3ZLuN8+ZyqErBvZC78FBJs9gKSyvKO1YkqP8EwHvivFkyAG6xIHse3L4/X2
bcpyNVTjX36nAN+SMH9bIEtzguCbxuclVOHJ2i3vnkGM1QZT8z9enFGEVcCdYRwI
hYG8+2HP59kq7PuaZ8+sr6mTfdS48vm2RO0z4G02LZ3jhlWdOcnUvQIp6TfnvNo3
VdOrEgzdmrF8pd+cLVCtOW1lvOxf61dMsUZFoAjQmuckNLkhvCU5HSzo8MrMMPsb
6+5q/p04ZGR39W6ZpctJ2aStRBeQKDWYD+XJNkibFN9vbKts6zI1PUplMKd4FYnk
gQ4LIQKCAQAHdiE2ZfNm+jpcuZt5tRNijdhgyxQpltjMEu759UoOlv5+W5CMMWDz
bXtbeN7cM6b/tJ1BHZdSnIekN0eleLOSHq/Z7Kcq/bLpGwcOWGIHpzYCgunRtT1x
dltA+r0TyHT220kpAGSHTMv0DyPCiHJLBWzWbFBbFOiQgATkiL0hYqE4rHEQqGDW
EJLA6I7y0tGGDPdO6qq9bx5E8NLxz6BnT/EqeS4M7lGtUuaq/v89BFOkZFNBvlk1
6tiGSmuYqx7S091iNID8sFCRveH6kLFWZw7Xg6cObyPcoaG/KU/QohHf5Y+VEW4k
kclKuBIXfrk0ttl+Z+r3X72aufTQeaUVAoIBAFWVnyu/NAzNgmS3LYP19p0Jl7Qv
BeKZzfC2u5suPS9kSimmgefGRAuW9T7Tj4WwCQbgSDiaLkr/RAbCtqpHmKXkLRn3
clXariBedPH2pEgTgVHVRDHdUw3oPRWGJ0w+ELvTFj829MH4w0LhyerMZuc3qK/f
+6ghbMahbh22kmVPuALXSoTCwnaE+3ybiyRx8HVZ+bJqX4nzJGPCfl+eCDPW8jZz
+9SXtyiexNTS5DUw8j1UyaavVW/5x7LcfJFgpG/Y27G+KAy6AeMSC4ED/SvumfTe
G97FID8E4gMopj+TuZ0ylV/bUaS9rP1+TutUUHG0SrTv+TuL5UUMui1r8kI=
-----END RSA PRIVATE KEY-----
`

const A1ComplianceIndexMapping = `{
  "template" : "compliance-20*",
  "settings" : {
    "index": {
      "refresh_interval" : "5s"
    },
    "analysis": {
      "analyzer": {
        "autocomplete": {
          "tokenizer": "autocomplete_tokenizer",
          "filter": [
            "lowercase"
          ]
        }
      },
      "tokenizer": {
        "autocomplete_tokenizer": {
          "type": "edge_ngram",
          "min_gram": 2,
          "max_gram": 20,
          "token_chars": [
            "letter",
            "digit"
          ]
        }
      }
    }
  },
  "mappings" : {
    "_default_" : {
      "_all" : {"enabled" : false, "omit_norms" : true},
      "dynamic_templates" : [ {
        "message_field" : {
          "match" : "message",
          "match_mapping_type" : "string",
          "mapping" : {
            "type" : "text", "omit_norms" : true,
            "fielddata" : false
          }
        }
      }, {
        "string_fields" : {
          "match" : "*",
          "match_mapping_type" : "string",
          "mapping" : {
            "type" : "keyword", "omit_norms" : true, "ignore_above": 256
          }
        }
      }, {
        "float_fields" : {
          "match" : "*",
          "match_mapping_type" : "float",
          "mapping" : { "type" : "float", "doc_values" : true }
        }
      }, {
        "double_fields" : {
          "match" : "*",
          "match_mapping_type" : "double",
          "mapping" : { "type" : "double", "doc_values" : true }
        }
      }, {
        "byte_fields" : {
          "match" : "*",
          "match_mapping_type" : "byte",
          "mapping" : { "type" : "byte", "doc_values" : true }
        }
      }, {
        "short_fields" : {
          "match" : "*",
          "match_mapping_type" : "short",
          "mapping" : { "type" : "short", "doc_values" : true }
        }
      }, {
        "integer_fields" : {
          "match" : "*",
          "match_mapping_type" : "integer",
          "mapping" : { "type" : "integer", "doc_values" : true }
        }
      }, {
        "long_fields" : {
          "match" : "*",
          "match_mapping_type" : "long",
          "mapping" : { "type" : "long", "doc_values" : true }
        }
      }, {
        "date_fields" : {
          "match" : "*",
          "match_mapping_type" : "date",
          "mapping" : { "type" : "date", "doc_values" : true }
        }
      }, {
        "geo_point_fields" : {
          "match" : "*",
          "match_mapping_type" : "geo_point",
          "mapping" : { "type" : "geo_point", "doc_values" : true }
        }
      } ],
      "properties" : {
        "@timestamp": { "type": "date", "doc_values" : true },
        "@version": { "type": "keyword", "doc_values" : true },
        "geoip"  : {
          "type" : "object",
          "dynamic": true,
          "properties" : {
            "ip": { "type": "ip", "doc_values" : true },
            "location" : { "type" : "geo_point", "doc_values" : true },
            "latitude" : { "type" : "float", "doc_values" : true },
            "longitude" : { "type" : "float", "doc_values" : true }
          }
        }
      }
    },


    "inspec_summary": {
      "properties": {
        "environment": {
          "type": "keyword",
          "fields": {
            "engram" : {
              "type": "text",
              "analyzer": "autocomplete"
            }
          }
        },
        "roles": {
          "type": "keyword",
          "fields": {
            "engram" : {
              "type": "text",
              "analyzer": "autocomplete"
            }
          }
        },
        "recipes": {
          "type": "keyword",
          "fields": {
            "engram" : {
              "type": "text",
              "analyzer": "autocomplete"
            }
          }
        },
        "profiles_sums": {
          "type" : "nested"
        },

        "platform": {
          "properties": {
            "name": {
              "type": "keyword",
              "fields": {
                "engram" : {
                  "type": "text",
                  "analyzer": "autocomplete"
                }
              }
            }
          }
        },
        "node_name": {
          "type": "keyword",
          "fields": {
            "engram" : {
              "type": "text",
              "analyzer": "autocomplete"
            }
          }
        }
      }
    },


    "inspec_report": {
      "properties": {
        "statistics": {
          "properties": {
            "duration": {
              "type": "double"
            }
          }
        },
        "profiles_min": {
          "type" : "nested",
          "properties": {
            "controls": {
              "type" : "nested",
              "properties": {
                "results": {
                  "properties": {
                    "run_time": {
                      "type": "double"
                    }
                  }
                },
                "impact": {
                  "type": "double"
                }
              }
            }
          }
        }
      }
    }
  }
}
`

const A1InsightsIndexMapping = `{
  "template" : "insights-*",
  "settings" : {
    "index": {
      "refresh_interval" : "5s"
    }
  },
  "mappings" : {
    "_default_" : {
      "_all" : {"enabled" : false, "omit_norms" : true},
      "dynamic_templates" : [ {
        "message_field" : {
          "match" : "message",
          "match_mapping_type" : "string",
          "mapping" : {
            "type" : "text", "omit_norms" : true,
            "fielddata" : false
          }
        }
      }, {
        "string_fields" : {
          "match" : "*",
          "match_mapping_type" : "string",
          "mapping" : {
            "type" : "keyword", "omit_norms" : true, "ignore_above" : 256
          }
        }
      }, {
        "float_fields" : {
          "match" : "*",
          "match_mapping_type" : "float",
          "mapping" : { "type" : "float", "doc_values" : true }
        }
      }, {
        "double_fields" : {
          "match" : "*",
          "match_mapping_type" : "double",
          "mapping" : { "type" : "double", "doc_values" : true }
        }
      }, {
        "byte_fields" : {
          "match" : "*",
          "match_mapping_type" : "byte",
          "mapping" : { "type" : "byte", "doc_values" : true }
        }
      }, {
        "short_fields" : {
          "match" : "*",
          "match_mapping_type" : "short",
          "mapping" : { "type" : "short", "doc_values" : true }
        }
      }, {
        "integer_fields" : {
          "match" : "*",
          "match_mapping_type" : "integer",
          "mapping" : { "type" : "integer", "doc_values" : true }
        }
      }, {
        "long_fields" : {
          "match" : "*",
          "match_mapping_type" : "long",
          "mapping" : { "type" : "long", "doc_values" : true }
        }
      }, {
        "date_fields" : {
          "match" : "*",
          "match_mapping_type" : "date",
          "mapping" : { "type" : "date", "doc_values" : true }
        }
      }, {
        "geo_point_fields" : {
          "match" : "*",
          "match_mapping_type" : "geo_point",
          "mapping" : { "type" : "geo_point", "doc_values" : true }
        }
      } ],
      "properties" : {
        "@timestamp": { "type": "date", "doc_values" : true },
        "@version": { "type": "keyword", "doc_values" : true },
        "geoip"  : {
          "type" : "object",
          "dynamic": true,
          "properties" : {
            "ip": { "type": "ip", "doc_values" : true },
            "location" : { "type" : "geo_point", "doc_values" : true },
            "latitude" : { "type" : "float", "doc_values" : true },
            "longitude" : { "type" : "float", "doc_values" : true }
          }
        }
      }
    }
  }
}
`
